# YouTube-comment-analysis

./: README.md  config.py  data_calculation.py  main.py  pyproject.toml  requirements.txt  youtube_fetcher.py
src/: display_terminal.py  main.py  sentiment_analyzer.py
